ui: ensure recommended book rows are horiz. aligned

--- a/packages/ui/src/pages/getting-started/PathBlock.css
+++ b/packages/ui/src/pages/getting-started/PathBlock.css
@@ -25,11 +25,13 @@ body .PathBooks:lang(es)::before {
   color: white !important;
 }
 
-@screen md {
+@media (min-width: 768px) and (max-width: 1024px) {
   .PathBooks > div:nth-last-child(-n + 2) {
     margin-bottom: 0;
   }
+}
 
+@screen md {
   .PathBooks > div:nth-last-child(-n + 2) svg path {
     color: white !important;
   }
@@ -84,7 +86,7 @@ body .PathBooks:lang(es)::before {
     transform: rotate(155deg);
     right: auto;
     left: -109%;
-    top: 100%;
+    top: 110%;
   }
 
   .PathBooks > div:nth-last-child(-n + 4) svg path {
